--- a/ChatMobile/app/src/main/res/layout/message_view.xml
+++ b/ChatMobile/app/src/main/res/layout/message_view.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textColor="#012"
-            android:background="#ffff00"
+            android:background="#4272db"
             />
     </LinearLayout>
 
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:textColor="#012"
             android:textSize="16sp"
-            android:background="#ffcc80"
+            android:background="#e31414"
             />
     </LinearLayout>
 
